# rust-task-manager

./: .gitignore  Cargo.toml  Makefile.toml  README.md
grpc-service/: Cargo.toml
grpc-service/src/: main.rs
migrations/: 001_create_users_table.sql  002_create_tasks_table.sql
shared/: Cargo.toml
shared/src/: error.rs  lib.rs
shared/src/db/: connection.rs  mod.rs  repository.rs
shared/src/models/: mod.rs  task.rs  user.rs
web-service/: Cargo.toml
web-service/src/: main.rs
